--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build",
+    "build": "react-scripts build babel src -d lib",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
@@ -57,5 +57,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  }
+  },
+  "main": "index.js",
+  "repository": "https://github.com/shamim-a/car-doctor-client.git",
+  "author": "shamim-a <shamim.cse04@gmail.com>",
+  "license": "MIT"
 }
